Changed: - [Order.java]   - removeItem(...) now rejects removing the final item from an order.   - getItems() now returns an unmodifiable list, so callers cannot bypass addItem / removeItem. - [Part2DomainMappingTest.java]   - Added a test proving the last order item cannot be removed.   - Added a test proving getItems().clear() is rejected.